--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ subjects:
 - !lcsh 'France -- Politics and government -- 1789-1900'
 - !lcsh 'French literature -- History and criticism'
 - !lcc 'PN'
+- GITenberg
 title: Cours familier de Littérature - Volume 18
 url: http://www.gutenberg.org/ebooks/45013
